# jarvis

./: .env.example  Makefile  README.md  docker-compose.yaml
agent/: Dockerfile  agent.py  main.py  pyproject.toml  requirements.txt
agent/app/: agent.py  backend.py  loggers.py  prompts.py  services.py
agent/app/common/: client.py
agent/app/validator/: endpoints.py  services.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/audio/: config.py  routes.py  schemas.py  validators.py
frontend/: Dockerfile  package-lock.json
