[tool.poetry]
name = "jarvis-backend"
version = "0.1.0"
description = ""
authors = ["MuzykaAndrii <andrymyzik@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
